# desktop_app_auto_updater

./: .gitignore  CMakeLists.txt  README.md  example.py
cpp/: CMakeLists.txt
cpp/include/auto_updater/: AutoUpdater.h  Downloader.h  HttpDownloader.h  HttpVersionChecker.h  IDownloader.h  IInstaller.h  IVersionChecker.h  Installer.h  PlatformInstaller.h  UpdateInfo.h  UpdateStatus.h  VersionChecker.h
cpp/src/: AutoUpdater.cpp  Downloader.cpp  HttpDownloader.cpp  HttpVersionChecker.cpp  Installer.cpp  PlatformInstaller.cpp  VersionChecker.cpp
cpp/tests/: CMakeLists.txt  tst_AutoUpdater.cpp
example/: CMakeLists.txt  main.cpp
python/: setup.py
python/auto_updater/: __init__.py  downloader.py  installer.py  update_info.py  updater.py  version_checker.py
python/tests/: conftest.py  test_downloader.py  test_installer.py  test_update_info.py  test_updater.py  test_version_checker.py
